syntax = "proto3";
package virtengine.oracle.v1;

import "google/api/annotations.proto";
import "gogoproto/gogo.proto";
import "amino/amino.proto";

import "virtengine/oracle/v1/params.proto";
import "virtengine/oracle/v1/prices.proto";

option go_package = "github.com/virtengine/virtengine/sdk/go/node/oracle/v1";

// QueryParamsRequest is the request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is the response type for the Query/Params RPC method.
message QueryParamsResponse {
    // params defines the parameters of the module.
    Params params = 1 [
        (gogoproto.nullable)   = false,
        (amino.dont_omitempty) = true
    ];
}

// QueryPriceFeedConfigRequest is the request type for price feed config.
message QueryPriceFeedConfigRequest {
  // denom is the denomination to query the price feed configuration for
  string denom = 1;
}

// QueryPriceFeedConfigResponse is the response type for price feed config.
message QueryPriceFeedConfigResponse {
  // price_feed_id is the Pyth price feed identifier for this denomination
  string price_feed_id = 1;
  // pyth_contract_address is the address of the Pyth smart contract
  string pyth_contract_address = 2;
  // enabled indicates if the price feed is enabled for this denomination
  bool   enabled = 3;
}

// QueryAggregatedPriceRequest is the request type for aggregated price.
message QueryAggregatedPriceRequest {
  // denom is the asset denomination
  string denom = 1;
}

// QueryAggregatedPriceResponse is the response type for aggregated price.
message QueryAggregatedPriceResponse {
  // aggregated_price is the aggregated price data
  AggregatedPrice aggregated_price = 1 [
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];

  // price_health is the health status for the price feed
  PriceHealth price_health = 2 [
    (gogoproto.nullable)   = false,
    (amino.dont_omitempty) = true
  ];
}

// Query defines the gRPC querier service of the oracle package.
service Query {
    // Prices query prices for specific denom
    rpc Prices(QueryPricesRequest) returns (QueryPricesResponse) {
      option (google.api.http).get = "/virtengine/oracle/v1/prices";
    }

    // Params returns the total set of minting parameters.
    rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
        option (google.api.http).get = "/virtengine/oracle/v1/params";
    }

    // PriceFeedConfig queries the price feed configuration for a given denom.
    rpc PriceFeedConfig(QueryPriceFeedConfigRequest)
      returns (QueryPriceFeedConfigResponse) {
      option (google.api.http).get = "/virtengine/oracle/v1/price_feed_config/{denom}";
    }

    // AggregatedPrice queries the aggregated price for a given denom.
    rpc AggregatedPrice(QueryAggregatedPriceRequest)
      returns (QueryAggregatedPriceResponse) {
      option (google.api.http).get = "/virtengine/oracle/v1/aggregated_price/{denom}";
    }
}
